--- a/ravioli-ui/package.json
+++ b/ravioli-ui/package.json
@@ -4,31 +4,41 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public",
-    "validate": "svelte-check"
+    "start": "sirv public"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^6.1.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@types/diff": "^4.0.2",
     "@types/file-saver": "^2.0.1",
     "@types/sql.js": "^1.0.3",
-    "@types/diff": "^4.0.2",
+    "autoprefixer": "^10.0.1",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
+    "postcss": "^8.1.4",
+    "postcss-cli": "^8.2.0",
+    "postcss-load-config": "^3.0.0",
+    "postcss-nesting": "^7.0.1",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.5.2",
+    "tailwindcss": "^1.9.6",
     "tslib": "^2.0.3",
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.7.2",
     "diff": "^4.0.2",
     "file-saver": "^2.0.2",
+    "google-translate-api-browser": "^1.1.71",
     "localforage": "^1.9.0",
     "node-sass": "^5.0.0",
     "sirv-cli": "^1.0.0",
