--- a/ravioli-ui/package.json
+++ b/ravioli-ui/package.json
@@ -10,7 +10,6 @@
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^6.1.0",
     "@tsconfig/svelte": "^1.0.0",
     "@types/diff": "^4.0.2",
@@ -25,6 +24,7 @@
     "postcss-nesting": "^7.0.1",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-modify": "^3.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
@@ -41,6 +41,7 @@
     "google-translate-api-browser": "^1.1.71",
     "localforage": "^1.9.0",
     "node-sass": "^5.0.0",
+    "rxjs": "^6.6.3",
     "sirv-cli": "^1.0.0",
     "sql.js": "^1.4.0"
   }
