--- a/ravioli-ui/public/manifest.json
+++ b/ravioli-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Ravioli",
+    "name": "Raviolio",
     "version": "0.1",
     "display": "standalone"
 }
